--- a/src/containers/skills/Skills.css
+++ b/src/containers/skills/Skills.css
@@ -18,7 +18,8 @@
 
 .skills-heading {
   font-size: 56px;
-  font-weight: 400;
+  font-weight: 450;
+  color: #78006E;
 }
 .subTitle {
   color: #868e96;
