--- a/src/containers/workExperience/WorkExperience.css
+++ b/src/containers/workExperience/WorkExperience.css
@@ -6,7 +6,8 @@
 
 .experience-heading {
   font-size: 56px;
-  font-weight: 400;
+  font-weight: 450;
+  color: #78006E;
 }
 
 .experience-container {
